--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <!-- Additional meta tags for better SEO -->
     <meta name="robots" content="index, follow" />
     <meta name="author" content="SCC INFOTECH" />
-    <meta name="theme-color" content="#12A594" />
+    <meta name="theme-color" content="#0d8be0" />
 
     <style>
       /* Remove default margins and set base styles */
@@ -107,7 +107,7 @@
       .loading-logo {
         font-size: 2rem;
         font-weight: 800;
-        color: #12a594;
+        color: #0d8be0;
         margin-bottom: 2rem;
         animation: pulse 2s infinite;
       }
@@ -116,7 +116,7 @@
         width: 50px;
         height: 50px;
         border: 3px solid rgba(18, 165, 148, 0.3);
-        border-top: 3px solid #12a594;
+        border-top: 3px solid #0d8be0;
         border-radius: 50%;
         animation: spin 1s linear infinite;
       }
@@ -150,7 +150,7 @@
       }
 
       ::-webkit-scrollbar-thumb {
-        background: #12a594;
+        background: #0d8be0;
         border-radius: 4px;
       }
 
