--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
       }
 
       ::-webkit-scrollbar-thumb:hover {
-        background: #0f8a7a;
+        background: #0b92ce;
       }
 
       /* Prevent flash of unstyled content */
