--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="dark">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/src/img/scc.png" />
@@ -65,15 +65,9 @@
 
       body {
         font-family: "Inter", system-ui, -apple-system, sans-serif;
-        background: linear-gradient(
-          135deg,
-          #0c0c0c 0%,
-          #1a1a1a 50%,
-          #0c0c0c 100%
-        );
-        color: white;
         overflow-x: hidden;
         line-height: 1.6;
+        transition: background-color 0.3s ease, color 0.3s ease;
       }
 
       /* Loading screen */
@@ -83,12 +77,7 @@
         left: 0;
         width: 100%;
         height: 100%;
-        background: linear-gradient(
-          135deg,
-          #0c0c0c 0%,
-          #1a1a1a 50%,
-          #0c0c0c 100%
-        );
+        background: hsl(var(--b1));
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -107,7 +96,7 @@
       .loading-logo {
         font-size: 2rem;
         font-weight: 800;
-        color: #0d8be0;
+        color: hsl(var(--p));
         margin-bottom: 2rem;
         animation: pulse 2s infinite;
       }
@@ -115,8 +104,8 @@
       .loading-spinner {
         width: 50px;
         height: 50px;
-        border: 3px solid rgba(18, 165, 148, 0.3);
-        border-top: 3px solid #0d8be0;
+        border: 3px solid hsl(var(--p) / 0.3);
+        border-top: 3px solid hsl(var(--p));
         border-radius: 50%;
         animation: spin 1s linear infinite;
       }
@@ -146,16 +135,16 @@
       }
 
       ::-webkit-scrollbar-track {
-        background: rgba(255, 255, 255, 0.1);
+        background: hsl(var(--b2));
       }
 
       ::-webkit-scrollbar-thumb {
-        background: #0d8be0;
+        background: hsl(var(--p));
         border-radius: 4px;
       }
 
       ::-webkit-scrollbar-thumb:hover {
-        background: #0b92ce;
+        background: hsl(var(--pf));
       }
 
       /* Prevent flash of unstyled content */
@@ -169,8 +158,6 @@
     <!-- Loading Screen -->
     <div class="loading-screen" id="loading-screen">
       <img src="/src/img/scc.png" alt="SCC Logo" class="loading-logo-img" />
-      <!-- <div class="loading-logo">SCC INFOTECH</div>
-      <div class="loading-spinner"></div> -->
     </div>
 
     <div id="root"></div>
